tests/back-end/fail/while_loop.t
  $ dune exec -- ../../../bin/raven.exe --shh ./while_loop.rav
  [Error] File "./while_loop.rav", line 15, columns 2-19:
  15 |   assert p[9] == 1;
         ^^^^^^^^^^^^^^^^^
  Verification Error: Assertion is not valid
  [1]
